--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,19 +18,21 @@
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
-    <%= link_to "Urban Lites", root_path %>
-    <div id="telephone">Call us on 0161 402 3271</div>
-    <nav>
-      <ul>
-        <li>Services</li>
-        <li>Our Ethos</li>
-        <li>Blog</li>
-        <li><%= link_to "Contact", contact_path %></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <%= link_to "Urban Lites", root_path %>
+      <div id="telephone_number">Call us on 0161 402 3271</div>
+      <nav>
+        <ul>
+          <li>Services</li>
+          <li>Our Ethos</li>
+          <li>Blog</li>
+          <li><%= link_to "Contact", contact_path %></li>
+        </ul>
+      </nav>
+    </div>
   </header>
   <div role="main">
-  <%= yield %>
+    <div class="container"><%= yield %></div>
   </div>
   <footer>
   </footer>
