--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,9 @@
 <h1>Costa conference</h1>
-<p>UrbanLites provide creative lighting solutions for the professional live events industry.
-Our experience ranges from creating stunning corporate events and exhibitions, to lighting up entertainment events such as rock concerts, club and party nights, outdoor festivals and theatre.</p>
+<div id="description">
+  <p>UrbanLites provide creative lighting solutions for the professional live events industry.
+  Our experience ranges from creating stunning corporate events and exhibitions, to lighting up entertainment events such as rock concerts, club and party nights, outdoor festivals and theatre.</p>
+</div>
+<div id="twitter">
+  <div class="tweet"></div>
+  <%= link_to "Follow us on Twitter", 'http://twitter.com/bitsushi' %>
+</div>
