--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,11 @@
 @import "bourbon";
-@import "jquery.tweet";
 
 $gw-column: 100px;          // Column Width
 $gw-gutter: 40px;           // Gutter Width
+
+@import "home";
+@import "contact";
+
 
 * {
   margin: 0;
@@ -22,12 +25,4 @@ nav {
 }
 #telephone_number {
   float: right;
-}
-#description {
-  float: left;
-  width: grid-width(4);     // returns 520px;
-}
-#twitter {
-  float: left;
-  width: grid-width(3);     // returns 520px;
 }
