--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,9 +1,11 @@
 <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Unit+10,+Medlock+Court,+Manchester,+M11+2NB&amp;aq=&amp;sll=53.504206,-2.136095&amp;sspn=0.01192,0.026007&amp;ie=UTF8&amp;hq=&amp;hnear=Medlock+Court+Welcomb+Street,+Manchester+M11+2NB,+United+Kingdom&amp;t=m&amp;z=14&amp;ll=53.472169,-2.181558&amp;output=embed"></iframe>
 
-UrbanLites Ltd
-Unit 10, Medlock Court
-The City Works
-Manchester
-M11 2NB
-Tel: +44 (0)161 402 3271
-Email: chris@urbanlites.com
+<div class="address">
+  <span class="company">UrbanLites Ltd</spa>
+  <span>Unit 10, Medlock Court</span>
+  <span>The City Works</span>
+  <span>Manchester</span>
+  <span>M11 2NB</span>
+  <span>Tel: +44 (0)161 402 3271</span>
+  <span>Email: chris@urbanlites.com</span>
+</div>
