--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,10 @@
       <div id="telephone_number">Call us on 0161 402 3271</div>
       <nav>
         <ul>
-          <li>Services</li>
-          <li>Our Ethos</li>
-          <li>Blog</li>
+          <li><%= link_to "Projects", projects_path %></li>
+          <li><%= link_to "Services", services_path %></li>
+          <li><%= link_to "Our Ethos", our_ethos_path %></li>
+          <li>Activity</li>
           <li><%= link_to "Contact", contact_path %></li>
         </ul>
       </nav>
