--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,22 @@
-<div id="window">
-  <h1>Costa conference</h1>
-  <div class="description">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras quam mi, fringilla eget semper nec, rutrum porta tellus. Donec malesuada quam in turpis dictum vel lacinia metus gravida.”</p>
-    <h3>When?</h3>
-    <p>December 2011</p>
-    <h3>What?</h3>
-    <p>All lighting provided</p>
+<div id="my-slideshow">
+<ul class="bjqs">
+  <% @projects.each do |project| %>
+  <li>
+  <div id="window">
+    <h1><%= link_to project.name, project %></h1>
+    <div class="description">
+      <%= project.equipment_used %>
+      <h3>When?</h3>
+      <p><%= project.when %></p>
+      <h3>What?</h3>
+      <p><%= project.what %></p>
+    </div>
   </div>
+  </li>
+  <% end %>
+</ul>
 </div>
+
 <div id="description">
   <p>UrbanLites provide creative lighting solutions for the professional live events industry.
   Our experience ranges from creating stunning corporate events and exhibitions, to lighting up entertainment events such as rock concerts, club and party nights, outdoor festivals and theatre.</p>
