--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
           <li><%= link_to "Projects", projects_path %></li>
           <li><%= link_to "Services", services_path %></li>
           <li><%= link_to "Our Ethos", our_ethos_path %></li>
-          <li>Activity</li>
+          <li><%= link_to "Activity", activity_path %></li>
           <li><%= link_to "Contact", contact_path %></li>
         </ul>
       </nav>
