--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,61 +1,117 @@
-<%= form_for(@project) do |f| %>
-  <% if @project.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
-
-      <ul>
-      <% @project.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for Photo.new, :html => { :multipart => true, :id => "fileupload"  } do |f| %>
+  <div class="row">
+    <div class="span16 fileupload-buttonbar">
+      <div class="progressbar fileupload-progressbar nofade"><div style="width:0%;"></div></div>
+      <span class="btn success fileinput-button">
+        <span>Add Files</span>
+        <%= f.file_field :path %>
+      </span>
+      <button type="submit" class="btn primary start">Start Upload</button>
+      <button type="reset" class="btn info cancel">Cancel Upload</button>
+      <button type="button" class="btn danger delete">Delete Selected</button>
+      <input type="checkbox" class="toggle">
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
   </div>
-  <div class="field">
-    <%= f.label :who %><br />
-    <%= f.text_field :who %>
-  </div>
-  <div class="field">
-    <%= f.label :where %><br />
-    <%= f.text_field :where %>
-  </div>
-  <div class="field">
-    <%= f.label :what %><br />
-    <%= f.text_field :what %>
-  </div>
-  <div class="field">
-    <%= f.label :when %><br />
-    <%= f.date_select :when %>
-  </div>
-  <div class="field">
-    <%= f.label :equipment_used %><br />
-    <%= f.text_area :equipment_used %>
-  </div>
-
-  <fieldset id="videos" class="">
-    <legend>Videos</legend>
-    <%= label_tag :video_url %>
-    <%= text_field_tag :video_url, nil, id: 'video_url', placeholder: 'http://www.youtube.com/watch?v=xCT-MB5wdj4' %>
-    <%= button_tag "Add Video", id: 'add_video' %>
-    <div class="hint">Paste in the youtube url</div>
-    <ul id="video_list"></ul>
-  </fieldset>
-
-  <fieldset id="photos" class="">
-    <legend>Photos</legend>
-    <%= label_tag :add_photo %>
-    <ul id="photo_list">
-    <%= f.fields_for :photos do |p| %>
-    <%= p.file_field :image %>
-    <% end %>
-    </ul>
-  </fieldset>
-
-  <div class="actions">
-    <%= f.submit %>
+  <br>
+  <div class="row">
+    <div class="span16">
+      <table class="zebra-striped"><tbody class="files"></tbody></table>
+      <div id="loading"> </div>
+    </div>
   </div>
 <% end %>
+<script>
+  var fileUploadErrors = {
+    maxFileSize: 'File is too big',
+    minFileSize: 'File is too small',
+    acceptFileTypes: 'Filetype not allowed',
+    maxNumberOfFiles: 'Max number of files exceeded',
+    uploadedBytes: 'Uploaded bytes exceed file size',
+    emptyResult: 'Empty file upload result'
+  };
+</script>
+
+
+<!--
+
+https://github.com/blueimp/jQuery-File-Upload/wiki/Basic-plugin
+https://github.com/blueimp/jQuery-File-Upload/wiki/Rails-setup-for-V6
+Edit below
+
+ -->
+
+
+
+
+
+
+
+<!-- IMPORTANT fade class makes fileupload depend on css transition effect REMOVE or RENAME it -->
+<script id="template-upload" type="text/html">
+  {% for (var i=0, files=o.files, l=files.length, file=files[0]; i<l; file=files[++i]) { %}
+  <tr class="template-upload nofade">
+    <td class="preview"><span class="nofade"></span></td>
+    <td class="name">{%=file.name%}</td>
+    <td class="size">{%=o.formatFileSize(file.size)%}</td>
+    {% if (file.error) { %}
+    <td class="error" colspan="2"><span class="label important">Error</span> {%=fileUploadErrors[file.error] || file.error%}</td>
+    {% } else if (o.files.valid && !i) { %}
+    <td class="progress"><div class="progressbar"><div style="width:0%;"></div></div></td>
+    <td class="start">{% if (!o.options.autoUpload) { %}<button class="btn primary"><%= t('photos.template.start') %></button>{% } %}</td>
+    {% } else { %}
+    <td colspan="2"></td>
+    {% } %}
+    <td class="cancel">{% if (!i) { %}<button class="btn info"><%= t('photos.template.cancel') %></button>{% } %}</td>
+  </tr>
+  {% } %}
+</script>
+<script id="template-download" type="text/html">
+  {% for (var i=0, files=o.files, l=files.length, file=files[0]; i<l; file=files[++i]) { %}
+  <tr class="template-download nofade">
+    {% if (file.error) { %}
+    <td></td>
+    <td class="name">{%=file.name%}</td>
+    <td class="size">{%=o.formatFileSize(file.size)%}</td>
+    <td class="error" colspan="2"><span class="label important">Error</span> {%=fileUploadErrors[file.error] || file.error%}</td>
+    {% } else { %}
+    <td class="preview">{% if (file.thumbnail_url) { %}
+      <a href="{%=file.url%}" title="{%=file.name%}" rel="gallery"><img src="{%=file.thumbnail_url%}"></a>
+    {% } %}</td>
+    <td class="name">
+      <a href="{%=file.url%}" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}">{%=file.name%}</a>
+    </td>
+    <td class="size">{%=o.formatFileSize(file.size)%}</td>
+    <td colspan="2"></td>
+    {% } %}
+    <td class="delete">
+    <button class="btn danger" data-type="{%=file.delete_type%}" data-url="{%=file.delete_url%}"><%= t('photos.template.delete') %></button>
+    <input type="checkbox" name="delete" value="1">
+    </td>
+  </tr>
+  {% } %}
+</script>
+
+<script src="http://blueimp.github.com/JavaScript-Templates/tmpl.min.js"></script>
+<script src="http://blueimp.github.com/JavaScript-Load-Image/load-image.min.js"></script>->
+
+<script type="text/javascript" charset="utf-8">
+    $(function () {
+        // Initialize the jQuery File Upload widget:
+        $('#fileupload').fileupload();
+        //
+        // Load existing files:
+        $.getJSON($('#fileupload').prop('action'), function (files) {
+          var fu = $('#fileupload').data('fileupload'),
+            template;
+          fu._adjustMaxNumberOfFiles(-files.length);
+          template = fu._renderDownload(files)
+            .appendTo($('#fileupload .files'));
+          // Force reflow:
+          fu._reflow = fu._transition && template.length &&
+            template[0].offsetWidth;
+          template.addClass('in');
+          $('#loading').remove();
+        });
+
+    });
+</script>
