--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,11 @@
 $gw-column: 100px;          // Column Width
 $gw-gutter: 40px;           // Gutter Width
 
+#admin_bar {
+	background: white;
+	padding: 10px;
+	text-align: center;
+}
 
 * {
   margin: 0;
