--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -1,3 +1,5 @@
+<ul>
 <% @projects.each do |project| %>
-  <%= link_to project, edit_admin_project_path(project) %>
+  <li><%= link_to project, edit_admin_project_path(project) %></li>
 <% end %>
+</ul>
