--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -7,7 +7,7 @@
   <span>Manchester</span>
   <span>M11 2NB</span>
   <span>+44 (0)161 402 3271</span>
-  <span><%= mail_to "chris@urbanlites.com" %></span>
+  <span><%= mail_to "chris@urbanlites.com", "Email Us", encode: "hex" %></span>
 </div>
 
 <div id="downloads">
