--- a/app/views/admin/downloads/_form.html.erb
+++ b/app/views/admin/downloads/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@download) do |f| %>
+<%= form_for ['admin',@download] do |f| %>
   <% if @download.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@download.errors.count, "error") %> prohibited this download from being saved:</h2>
@@ -21,6 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :file %><br />
+    <%= link_to(@download.file, @download.file.url) if @download.file %>
     <%= f.file_field :file %>
   </div>
   <div class="actions">
