--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,7 @@
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
-
-    <div id="admin_bar"><%= link_to("ADMIN", admin_projects_path) if current_user.present? %></div>
-
+    <% if current_user.present? %><div id="admin_bar"><%= link_to("ADMIN", admin_projects_path) %></div><% end %>
     <div class="container">
       <%= link_to "Urban Lites", root_path %>
       <div id="telephone_number">Call us on 0161 402 3271</div>
