--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,6 +22,8 @@
   Our experience ranges from creating stunning corporate events and exhibitions, to lighting up entertainment events such as rock concerts, club and party nights, outdoor festivals and theatre.</p>
 </div>
 <div id="twitter">
-  <div class="tweet"></div>
+  <div class="tweet">
+    <div class="tweet_body"><%= TwitterPost.first %></div>
+  </div>
   <%= link_to "Follow us on Twitter", 'http://twitter.com/bitsushi' %>
 </div>
