--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -7,10 +7,11 @@ ul#services {
   li {
     border: 1px solid black;
     display: block;
-    width: 120px;
+    width: grid-width(2);
+    text-align: center;
     height: 200px;
     float: left;
-    margin-right: 10px;
+//    margin-right: 10px;
     overflow: hidden;
     position: relative;
     .description {
