--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,10 +18,14 @@
 </div>
 
 <div id="description">
+  <h5>UrbanLites</h5>
+  <h6>Manchester Based Event Lighting Company</h6>
   <p>UrbanLites provide creative lighting solutions for the professional live events industry.
   Our experience ranges from creating stunning corporate events and exhibitions, to lighting up entertainment events such as rock concerts, club and party nights, outdoor festivals and theatre.</p>
 </div>
+
 <div id="twitter">
+  <h5>Our latest tweet...</h5>
   <div class="tweet">
     <div class="tweet_body"><%= TwitterPost.first %></div>
   </div>
