--- a/app/views/admin/downloads/_form.html.erb
+++ b/app/views/admin/downloads/_form.html.erb
@@ -11,19 +11,23 @@
     </div>
   <% end %>
 
+
+  <fieldset>
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :description %><br />
+    <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :file %><br />
+    <%= f.label :file %>
     <%= link_to(@download.file, @download.file.url) if @download.file %>
     <%= f.file_field :file %>
   </div>
+  </fieldset>
+
   <div class="actions">
     <%= f.submit %>
   </div>
