--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   <header>
     <div class="container">
       <div id="ident">
-        <div id="logo"><%= link_to "Urban Lites", root_path %></div>
+        <div id="logo"><%= image_tag "urban_lites_logo.png" %></div>
         <span id="tag_line">High quality lighting, rigging design and rental services.</span>
       </div>
 
