--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,9 +1,57 @@
+@import 'bourbon';
+a {
+  text-decoration: none;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   background: #FEFEFE;
+  font-size: 15px;
+  font-family: 'Lucida Grande';
+  margin-bottom: 20px;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+input, textarea {
+  padding: 2px 3px;
+}
+
+fieldset {
+  border: 1px solid #EEE;
+  padding: 20px;
+}
+
+header {
+  background: #2D9940;
+  overflow: hidden;
+  margin-bottom: 10px;
+  padding: 15px;
+  a {
+    color: #FFF;
+    text-shadow: 1px 1px 1px #164B1D;
+    text-decoration: none;
+    font-weight: bold;
+  }
+}
+
+legend {
+  color: #BBB;
 }
 
 label {
   display: block;
+  float: left;
+  width: 200px;
+}
+
+div.field {
+  margin-bottom: 10px;
 }
 
 ul#navigation {
@@ -12,6 +60,7 @@ ul#navigation {
   padding: 0;
   li {
     display: inline;
+    margin-right: 10px;
   }
 }
 
@@ -23,4 +72,72 @@ text-align: center;
 
 span.hint {
   color: #888;
+}
+
+.upload_preview {
+  display: block;
+  background: grey;
+//  width: 80px;
+//  height: 80px;
+  line-height: 100%;
+
+  img {
+    width: 80px;
+  }
+}
+
+#media {
+  .bsmList {
+    margin: 0;
+    padding: 0;
+  }
+  .bsmListItem {
+    font-size: .7em;
+    padding: 5px;
+    width: 90px;
+    height: 90px;
+    display: block;
+    float: left;
+    margin: 10px;
+    border: 1px solid black;
+    list-style: none;
+    position: relative;
+  }
+  .bsmListItemRemove {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
+
+.field_with_errors {
+  background: #FF9696;
+}
+
+#errorExplanation {
+  padding: 10px;
+  background: #FF9696;
+  ul {
+    margin-left: 20px;
+  }
+  margin-bottom: 10px
+}
+
+li#logout {
+ a {
+   background: #981116;
+   color: #EEE;
+   padding: 4px;
+   text-shadow: none;
+   @include button(red);
+ }
+ float: right;
+}
+
+h1,h2,h3 {
+  margin-bottom: .2em;
+}
+
+.button, input[type='submit'] {
+  @include button;
 }
