--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -1,16 +1,7 @@
-<%= form_for(@service) do |f| %>
-  <% if @service.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@service.errors.count, "error") %> prohibited this service from being saved:</h2>
+<%= form_for['admin',@service] do |f| %>
+  <%= render "application/error_messages", :target => @service %>
 
-      <ul>
-      <% @service.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+  <fieldset>
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
@@ -19,6 +10,8 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
+  </fieldset>
+
   <div class="actions">
     <%= f.submit %>
   </div>
